--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -33,4 +33,4 @@ jobs:
 
       - name: Automation invalidation for index.html file
         run:
-          aws cloudfront create-invalidation --distribution-id s3://${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/container/latest/index.html"
